<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">电量显示和整点报时</string>
    <string name="sunday">今天不要工作太累哦，加油！</string>
    <string name="monday">快乐学习，快乐工作啦！</string>
    <string name="tuestday">每天进步一点点，good！</string>
    <string name="wednesday">是一个突破自己的日子哦！</string>
    <string name="thursday">运动愉快，走起！</string>
    <string name="friday">跟她逛逛街也不错哦！</string>
    <string name="saturday">适当的休息很重要哦！</string>
    <string name="version">Minggo电池[version 1.3]</string>
    <string name="battery_low">低电量声音</string>
    <string name="time_alarm">整点报时声音</string>
    <string name="exit">退出</string>
    <string name="submit">确定</string>
    <string name="shuai_yi_shuai">甩家务</string>
    <string name="shuai_jia_wu">甩家务</string>
    <string name="shuai_dian_shu">甩点数</string>
    <string name="minggo_battery">minggo电池</string>
</resources>